// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid alignItems returns alignItems center and justifyContent when columns passed 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: center; justify-content: space-between;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid alignItems returns alignItems justifyContent center when no columns passed 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: center; justify-content: center;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid coulmns returns gridAutoColumns when passing colWidth only 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: space-between;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid coulmns returns gridTemplateColumns when passing col 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: space-between;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid coulmns returns gridTemplateColumns when passing colWidth and col 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: space-between;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid rows returns gridAutoRows when passing rowWidth only 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: stretch;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid rows returns gridTemplateRows when passing row with minmax 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: stretch;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid rows returns gridTemplateRows when passing row with width 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: stretch;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid style returns default style 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: grid; align-items: stretch; justify-content: stretch;"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Grid style returns default style 2`] = `
<body>
  <div>
    <div
      data-testid="testidforGrid"
      style="display: inline-grid; align-items: stretch; justify-content: stretch;"
    >
      <div />
    </div>
  </div>
</body>
`;
